<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="transfer_download_current_dialog_title">Caution!</string>
    <string name="transfer_download_current_dialog_message">You have made some changes. Do you want to upload them instead of discard?</string>
    <string name="transfer_download_current_upload">Upload</string>
    <string name="transfer_download_current_download">Discard &amp; download</string>
    <string name="transfer_download_current_back">Back (Do nothing)</string>
    <string name="upload_problem_title">Problem With Upload</string>
    <string name="upload_problem_message">Some or all data was not uploaded. Try uploading again later if this was only a temporary problem.</string>
    <string name="upload_conflict_title">Upload conflict</string>
    <string name="upload_conflict_message_version">%1$s \nhas local version %2$s \nand on the server %3$s </string>
    <string name="upload_conflict_message_deleted">%1$s \nhas local version %2$s \nand was deleted on the server</string>
    <string name="upload_conflict_message_referential">%1$s \nwas deleted locally \nbut has references on the server </string>
    <string name="upload_conflict_message_already_deleted">%1$s \nwas already deleted on the server </string>
    <string name="use_local_version">Use \nlocal \nversion</string>
    <string name="use_server_version">Use \nversion \non server</string>
    <string name="no_login_data_title">Authentication failed</string>
    <string name="no_login_data_message">If you are using OAuth this is likely a bug, please send a problem report, if you are using login and password (not recommended) please check that they are entered correctly.</string>
    <string name="no_connection_title">No Connection to Server</string>
    <string name="no_connection_message">Could not connect to the OSM-Server. Please check your Internet connection or try again later.</string>
    <string name="ssl_handshake_failed">Could not connect to the OSM-Server because https negotiation failed. Try switching to a non-encrypted connection in the API preferences.</string>
    <string name="wrong_login_data_title">Authentication failed</string>
    <string name="wrong_login_data_message">If you are using OAuth you should re-authenticate and then retry, if you are using login and password (not recommended) please check that they are entered correctly.</string>
    <string name="wrong_login_data_re_authenticate">Re-Authenticate</string>
    <string name="data_conflict_title">Version Conflict</string>
    <string name="data_conflict_message">The data you are trying to download contains data that conflicts with your edits. Please try to upload your data first before retrying.</string>
    <string name="invalid_bounding_box_title">Invalid Bounding Box</string>
    <string name="invalid_bounding_box_message">The area selected fails to conform to the API restrictions, please choose a different one.</string>
    <string name="api_offline_title">API Offline</string>
    <string name="api_offline_message">The API is currently offline and does not allow data to be retrieved or written.</string>
    <string name="out_of_memory_title">Out of Memory</string>
    <string name="out_of_memory_message">Vespucci has run out of memory loading the requested data. Please restart and try loading a smaller area.</string>
    <string name="out_of_memory_dirty_message">Vespucci has run out of memory loading the requested data. Please attempt to save your edits, restart and try loading a smaller area.</string>
    <string name="invalid_data_received_title">Invalid Data Received</string>
    <string name="invalid_data_received_message">Vespucci received invalid data from the server. If you believe that what you were trying to do is correct, please file a bug report.</string>
    <string name="invalid_data_read_title">Invalid Data</string>
    <string name="invalid_data_read_message">The file contained invalid data. If you believe that what you were trying to do is correct, please file a bug report.</string>
    <string name="file_write_failed_title">File write failed</string>
    <string name="file_write_failed_message">Could not write to selected file.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Thank you for using Vespucci.\n\nTo get started you need to know two things:\n\n* tapping the lock icon in the upper left corner will switch between locked (no editing) and unlocked mode\n\n* to add a new object: long press, tapping in the same place will add a node, tapping further away will start a way.\n\nDo not forget to download the area you want to edit.\n\nHave fun!</string>
    <string name="read_introduction">Read the introduction now</string>
    <string name="upgrade_title">Welcome to a new version of Vespucci!</string>
    <string name="upgrade_message">This is a new version of Vespucci with new features and behaviour. It would be best to quickly read the on device upgrade information.</string>
    <string name="read_upgrade">Read about the new version</string>
    <string name="progress_title">Loading</string>
    <string name="progress_message">Loading data into memory…</string>
    <string name="progress_download_message">Downloading data from server…</string>
    <string name="progress_general_title">Please wait</string>
    <string name="progress_deleting_message">Deleting…</string>
    <string name="progress_searching_message">Searching…</string>
    <string name="progress_saving_message">Saving…</string>
    <string name="progress_uploading_message">Uploading…</string>
    <string name="progress_preset_message">Downloading preset…</string>
    <string name="progress_oauth">Loading your account on openstreetmap.org for OAuth authorisation…</string>
    <string name="upload_comment_label">Comment:</string>
    <string name="upload_source_label">Source:</string>
    <string name="upload_close_changeset_label">Close changeset:</string>
    <string name="upload_gpx_description_label">Description</string>
    <string name="upload_gpx_tags_label">Tags</string>
    <string name="upload_gpx_visibility_label">Visibility</string>
    <string name="openstreetbug_new_title">New Note</string>
    <string name="openstreetbug_new_bug">Report Issue</string>
    <string name="openstreetbug_bug_title">Issue</string>
    <string name="openstreetbug_new_nodeway">Create Node/Way</string>
    <string name="openstreetbug_edit_title">Edit Note</string>
    <string name="openstreetbug_commitbutton">Commit</string>
    <string name="openstreetbug_comment_label">Comment:</string>
    <string name="openstreetbug_edit_close">Close</string>
    <string name="openstreetbug_edit_closed">Closed</string>
    <string name="openstreetbug_commit_ok">Bug changes saved</string>
    <string name="openstreetbug_commit_fail">Could not save bug changes</string>
    <string name="openstreetbug_not_downloaded">not downloaded</string>
    <string name="openstreetbug_last_updated">last updated</string>
    <string name="unsaved_data_title">Caution!</string>
    <string name="unsaved_data_message">You have unsaved changes that will be discarded if you proceed.</string>
    <string name="unsaved_data_proceed">Discard &amp; proceed</string>
    <string name="imagery_offset_title">Imagery Offset</string>
    <string name="imagery_offset_description">Description</string>
    <string name="imagery_offset_not_found">No offsets found in 10km radius!</string>
    <string name="imagery_offset_author">Author</string>
    <string name="imagery_offset_offset">Offset</string>
    <string name="imagery_offset_date">Created</string>
    <string name="imagery_offset_zoom">Zoom</string>
    <string name="imagery_offset_distance">Distance</string>
    <string name="enable">Enable</string>
    <string name="tag_menu_address">Add address tags</string>
    <string name="tag_menu_sourcesurvey">Surveyed</string>
    <string name="tag_menu_preset">Presets</string>
    <string name="tag_menu_apply_preset">Apply best preset</string>
    <string name="tag_menu_repeat">Repeat tags</string>
    <string name="tag_menu_revert">Revert</string>
    <string name="tag_menu_mapfeatures">Map Features Wiki</string>
    <string name="tag_menu_resetMRU">Reset Presets</string>
    <string name="tag_menu_reset_address_prediction">Reset address prediction</string>
    <string name="location_headline">Load Area</string>
    <string name="location_choose_radius">Choose radius:</string>
    <string name="location_default_radius">300m</string>
    <string name="location_last_text">Last known location:</string>
    <string name="location_current_text">Current location:</string>
    <string name="location_coordinates_text">From coordinates:</string>
    <string name="location_lat_label">Lat:</string>
    <string name="location_lon_label">Lon:</string>
    <string name="location_search_label">Search:</string>
    <string name="location_load_button">Load</string>
    <string name="location_load_dismiss">Go to map</string>
    <string name="menu_config">Preferences</string>
    <string name="menu_find">Find</string>
    <string name="menu_help">Help</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gps">GPS…</string>
    <string name="menu_gps_show">Show location</string>
    <string name="menu_gps_follow">Follow GPS position</string>
    <string name="menu_gps_goto">Goto GPS position</string>
    <string name="menu_gps_start">Start GPS track</string>
    <string name="menu_gps_pause">Pause GPS track</string>
    <string name="menu_gps_clear">Clear GPS track</string>
    <string name="menu_gps_track_managment">Track management...</string>
    <string name="menu_gps_upload">Upload GPS track</string>
    <string name="menu_gps_export">Export GPS track</string>
    <string name="menu_gps_import">Import GPS track</string>
    <string name="menu_gps_goto_start">Goto start of track</string>
    <string name="menu_gps_autodownload">Auto download</string>
    <string name="menu_transfer">Transfer…</string>
    <string name="menu_transfer_download_current">Download current view</string>
    <string name="menu_transfer_download_current_add">Add current view to download</string>
    <string name="menu_transfer_download_other">Download other location</string>
    <string name="menu_transfer_upload">Upload data to OSM server</string>
    <string name="menu_transfer_close_changeset">Close current changeset</string>
    <string name="menu_transfer_file">File...</string>
    <string name="menu_transfer_export">Export changes</string>
    <string name="menu_transfer_read_file">Read from file</string>
    <string name="menu_transfer_save_file">Save to file</string>
    <string name="menu_transfer_bugs">Notes/Bugs...</string>
    <string name="menu_transfer_bugs_download_current">Download bugs for current view</string>
    <string name="menu_transfer_bugs_upload">Upload all</string>
    <string name="menu_transfer_bugs_clear">Clear</string>
    <string name="menu_voice_commands">Voice commands</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_tools_flush_background_tile_cache">Flush background tile cache</string>
    <string name="menu_tools_flush_overlay_tile_cache">Flush overlay tile cache</string>
    <string name="menu_tools_background_properties">Background properties</string>
    <string name="menu_tools_background_align">Align background</string>
    <string name="urldialog_add_preset">Add preset</string>
    <string name="urldialog_preset_exists">This preset already exists</string>
    <string name="urldialog_preset_download_successful">Preset download successful!</string>
    <string name="urldialog_nodata_text">The configuration URL does not contain valid data.</string>
    <string name="preset">Preset</string>
    <string name="undo">Undo</string>
    <string name="role">Role</string>
    <string name="type">Type</string>
    <string name="object">Object</string>
</resources>