<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/menu_undo"
		android:title="@string/undo"
		android:alphabeticShortcut="@string/shortcut_undo"
		android:icon="?attr/menu_undo"
		android:showAsAction="ifRoom"
		android:actionLayout="@layout/undo_action_view"
	/>
    	
	<item
		android:id="@+id/menu_camera"
		android:title="@string/menu_camera"
		android:icon="?attr/menu_camera"
		android:showAsAction="always"
	/>	
	<item
		android:id="@+id/menu_voice"
		android:title="@string/menu_voice_commands"
		android:icon="?attr/mic"
		android:showAsAction="ifRoom"
	/>
	<item
		android:id="@+id/menu_gps"
		android:title="@string/menu_gps"
		android:icon="?attr/menu_gps"
		android:showAsAction="ifRoom"
	>	
		
		<menu>
				<item
					android:id="@+id/menu_gps_show"
					android:title="@string/menu_gps_show"
					android:checkable="true"
				/>
				<item
					android:id="@+id/menu_gps_follow"
					android:title="@string/menu_gps_follow"
					android:checkable="true"
					android:alphabeticShortcut="@string/shortcut_gps_follow"
				/>
				<item
					android:id="@+id/menu_gps_goto"
					android:title="@string/menu_gps_goto"
					android:alphabeticShortcut="@string/shortcut_gps_goto"
				/>
				<item
					android:id="@+id/menu_gps_start"
					android:title="@string/menu_gps_start"
				/>
				<item
					android:id="@+id/menu_gps_pause"
					android:title="@string/menu_gps_pause"
				/>
				<item
					android:id="@+id/menu_gps_clear"
					android:title="@string/menu_gps_clear"
				/>
				<item
					android:title="@string/menu_gps_track_managment" >
					<menu>
						<item
							android:id="@+id/menu_gps_upload"
							android:title="@string/menu_gps_upload"
						/>
						<item
							android:id="@+id/menu_gps_export"
							android:title="@string/menu_gps_export"
						/>
						<item
							android:id="@+id/menu_gps_import"
							android:title="@string/menu_gps_import"
						/>
					</menu>
				</item>
				<item
					android:id="@+id/menu_gps_goto_start"
					android:title="@string/menu_gps_goto_start"
				/>
			</menu>
	</item>
	
	<item
		android:id="@+id/menu_transfer"
		android:title="@string/menu_transfer"
		android:icon="?attr/menu_transfer"
		android:showAsAction="ifRoom"
	>	
		<menu>
				<item
					android:id="@+id/menu_transfer_download_current"
					android:title="@string/menu_transfer_download_current"
				/>
				<item
					android:id="@+id/menu_transfer_download_current_add"
					android:title="@string/menu_transfer_download_current_add"
					android:alphabeticShortcut="@string/shortcut_download"
				/>
				<item
					android:id="@+id/menu_transfer_download_other"
					android:title="@string/menu_transfer_download_other"
				/>
				<item
					android:id="@+id/menu_transfer_upload"
					android:title="@string/menu_transfer_upload"
				/>
				<item
					android:id="@+id/menu_gps_autodownload"
					android:title="@string/menu_gps_autodownload"
					android:checkable="true"
				/>
				<item
					android:id="@+id/menu_transfer_close_changeset"
					android:title="@string/menu_transfer_close_changeset"
				/>
				<item
					android:title="@string/menu_transfer_file" >
					<menu>
						<item
							android:id="@+id/menu_transfer_export"
							android:title="@string/menu_transfer_export"
						/>
						<item
							android:id="@+id/menu_transfer_read_file"
							android:title="@string/menu_transfer_read_file"
						/>
						<item
							android:id="@+id/menu_transfer_save_file"
							android:title="@string/menu_transfer_save_file"
						/>
					</menu>
				</item>
				<item
					android:title="@string/menu_transfer_bugs" >
					<menu>
					    <item
							android:id="@+id/menu_transfer_bugs_download_current"
							android:title="@string/menu_transfer_bugs_download_current"
							android:alphabeticShortcut="@string/shortcut_bugs_download"
						/>
						<item
							android:id="@+id/menu_transfer_bugs_upload"
							android:title="@string/menu_transfer_bugs_upload"
						/>
						<item
							android:id="@+id/menu_transfer_bugs_clear"
							android:title="@string/menu_transfer_bugs_clear"
						/>				
						<item
							android:id="@+id/menu_transfer_bugs_autodownload"
							android:title="@string/menu_gps_autodownload"
							android:checkable="true"
						/>
					</menu>
				</item>
			</menu>
	</item>
	<item
		android:id="@+id/menu_config"
		android:title="@string/menu_config"
		android:icon="?attr/menu_config"
		android:showAsAction="ifRoom"
	/>
	<item
		android:id="@+id/menu_tools"
		android:title="@string/menu_tools"
		android:icon="?attr/menu_tools"
		android:showAsAction="ifRoom"
	>	
		<menu>
				<item
					android:id="@+id/menu_tools_flush_background_tile_cache"
					android:title="@string/menu_tools_flush_background_tile_cache"
				/>
				<item
					android:id="@+id/menu_tools_flush_overlay_tile_cache"
					android:title="@string/menu_tools_flush_overlay_tile_cache"
				/>
				<item
					android:id="@+id/menu_tools_background_align"
					android:title="@string/menu_tools_background_align"
				/>
				<item
					android:id="@+id/menu_tools_background_properties"
					android:title="@string/menu_tools_background_properties"
				/>
	
		</menu>
	</item>
	<item
		android:id="@+id/menu_find"
		android:title="@string/menu_find"
		android:icon="?attr/menu_find"
		android:showAsAction="ifRoom"
	/>		
	<item
		android:id="@+id/menu_help"
		android:title="@string/menu_help"
		android:alphabeticShortcut="@string/shortcut_help"
		android:icon="?attr/menu_help"
		android:showAsAction="ifRoom"
	/>
</menu>
