<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tag_menu_sourcesurvey"
        android:title="@string/tag_menu_sourcesurvey"
        android:showAsAction="always|withText"
    />
    <item
        android:id="@+id/tag_menu_preset"
        android:title="@string/tag_menu_preset"
        android:showAsAction="always|withText"
    />
    <item
        android:id="@+id/tag_menu_repeat"
        android:title="@string/tag_menu_repeat"
        android:showAsAction="always|withText"
    />
    <item
        android:id="@+id/tag_menu_revert"
        android:title="@string/tag_menu_revert"
        android:showAsAction="always|withText"
    />
    <item
        android:id="@+id/tag_menu_mapfeatures"
        android:title="@string/tag_menu_mapfeatures"
        android:alphabeticShortcut="m"
        android:showAsAction="ifRoom|withText"
    />
</menu>