<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="?attr/dialogPreferredPadding"
    android:layout_marginRight="?attr/dialogPreferredPadding"
    android:paddingTop="?attr/dialogPreferredPadding"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location_headline"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/location_type_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/location_type"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/location_last"
            android:enabled="false"
            android:text="@string/location_last_text" />

        <RadioButton
            android:id="@+id/location_current"
            android:enabled="false"
            android:text="@string/location_current_text" />
        <!-- <RadioButton -->
        <!-- android:id="@+id/location_map" -->
        <!-- android:text="@string/location_map_text" -->
        <!-- android:enabled="false" -->
        <!-- /> -->

        <RadioButton
            android:id="@+id/location_coordinates"
            android:text="@string/location_coordinates_text" />

        <LinearLayout
            android:id="@+id/location_coordinates_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_lat_label" />

            <EditText
                android:id="@+id/location_lat_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned|numberDecimal"
                android:minWidth="120dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/location_lon_label" />

            <EditText
                android:id="@+id/location_lon_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned|numberDecimal"
                android:minWidth="120dp"
                android:singleLine="true" />
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_search_label" />

        <EditText
            android:id="@+id/location_search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_choose_radius" />

        <TextView
            android:id="@+id/location_radius_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_default_radius" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/location_radius_seeker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="1500"
        android:progress="300" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/location_button_current"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/location_load_button" />

        <Button
            android:id="@+id/location_button_no_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/location_load_dismiss" />
    </LinearLayout>

</LinearLayout>